--- a/product3.html
+++ b/product3.html
@@ -46,17 +46,16 @@
                 <a href="headphones.html">
                     <p class="black-p50" id="goBack">GO BACK</p>
                 </a>
-                <img src="img/Headphones/big-imgs/XX99-II.png" alt="XX99">
+                <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99">
                 <div class="text-div">
-                    <span>NEW PRODUCT</span>
                     <h2 class="black-40px">
-                        XX99 MARK II
-                        HEADPHONES
+                        XX59
+                        Headphones
                     </h2>
-                    <p class="black-p50">The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines
-                        your premium headphone experience by reproducing the balanced depth and precision of
-                        studio-quality sound.</p>
-                    <h4>$ 2,999</h4>
+                    <p class="black-p50">Enjoy your audio almost anywhere and customize it to your specific tastes with
+                        the XX59 headphones. The stylish yet durable versatile wireless headset is a brilliant companion
+                        at home or on the move.</p>
+                    <h4>$ 899</h4>
                     <div>
                         <div>
                             <button id="countDown">
@@ -85,16 +84,16 @@
                     <h3 class="black-32px">
                         FEATURES
                     </h3>
-                    <p class="black-p50">As the headphones all others are measured against, the XX99 Mark I demonstrates over five decades of
-                        audio expertise, redefining the critical listening experience. This pair of closed-back headphones
-                        are made of industrial, aerospace-grade materials to emphasize durability at a relatively light
-                        weight of 11 oz.<br><br>
-    
-                        From the handcrafted microfiber ear cushions to the robust metal headband with inner damping
-                        element, the components work together to deliver comfort and uncompromising sound. Its closed-back
-                        design delivers up to 27 dB of passive noise cancellation, reducing resonance by reflecting sound to
-                        a dedicated absorber. For connectivity, a specially tuned cable is included with a balanced gold
-                        connector.</p>
+                    <p class="black-p50">These headphones have been created from durable, high-quality materials tough
+                        enough to take anywhere. Its compact folding design fuses comfort and minimalist style making it
+                        perfect for travel. Flawless transmission is assured by the latest wireless technology
+                        engineered for audio synchronization with videos.<br><br>
+
+                        More than a simple pair of headphones, this headset features a pair of built-in microphones for
+                        clear, hands-free calling when paired with a compatible smartphone. Controlling music and calls
+                        is also intuitive thanks to easy-access touch buttons on the earcups. Regardless of how you use
+                        the XX59 headphones, you can do so all day thanks to an impressive 30-hour battery life that can
+                        be rapidly recharged via USB-C.</p>
                 </div>
                 <div class="inBox">
                     <h3 class="black-32px">
@@ -102,29 +101,30 @@
                     </h3>
                     <div class="inBoxDivs">
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Headphone Unit</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">Headphone Unit</p>
                         </div>
                         <div>
-                            <p class="orange-15px">2x</p><p class="black-p50">Replacement Earcups</p>
+                            <p class="orange-15px">2x</p>
+                            <p class="black-p50">Replacement Earcups</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">User Manual</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">User Manual</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">3.5mm 5m Audio Cable</p>
-                        </div>
-                        <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Travel Bag</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">3.5mm 5m Audio Cable</p>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="img-reviews">
                 <div>
-                    <img src="img/Headphones/XX99-II-Review/img-1.png" alt="XX99">
-                    <img src="img/Headphones/XX99-II-Review/img-2.png" alt="XX99">
+                    <img src="img/Headphones/XX99-I-Review/img-1.png" alt="XX99">
+                    <img src="img/Headphones/XX99-I-Review/img-2.png" alt="XX99">
                 </div>
-                <div><img src="img/Headphones/XX99-II-Review/img-3.png" alt="XX99"></div>
+                <div><img src="img/Headphones/XX99-I-Review/img-3.png" alt="XX99"></div>
             </section>
             <section class="otherProducts">
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
@@ -133,21 +133,21 @@
                             <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
                             <div>
                                 <h5 class="black-24px">XX99 MARK I</h5>
-                                <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
+                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-II">
                             <div>
-                                <h5 class="black-24px">XX59</h5>
-                                <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
+                                <h5 class="black-24px">XX99 MARK II</h5>
+                                <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
                             <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
                             <div>
                                 <h5 class="black-24px">ZX9 SPEAKER</h5>
-                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                     </div>
