--- a/product5.html
+++ b/product5.html
@@ -46,17 +46,16 @@
                 <a href="headphones.html">
                     <p class="black-p50" id="goBack">GO BACK</p>
                 </a>
-                <img src="img/Headphones/big-imgs/XX99-II.png" alt="XX99">
+                <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99">
                 <div class="text-div">
-                    <span>NEW PRODUCT</span>
                     <h2 class="black-40px">
-                        XX99 MARK II
-                        HEADPHONES
+                        ZX7
+                        SPEAKER
                     </h2>
-                    <p class="black-p50">The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines
-                        your premium headphone experience by reproducing the balanced depth and precision of
-                        studio-quality sound.</p>
-                    <h4>$ 2,999</h4>
+                    <p class="black-p50">Stream high quality sound wirelessly with minimal to no loss. The ZX7 speaker
+                        uses high-end audiophile components that represents the top of the line powered speakers for
+                        home or studio use.</p>
+                    <h4>$ 3,500</h4>
                     <div>
                         <div>
                             <button id="countDown">
@@ -85,16 +84,16 @@
                     <h3 class="black-32px">
                         FEATURES
                     </h3>
-                    <p class="black-p50">As the headphones all others are measured against, the XX99 Mark I demonstrates over five decades of
-                        audio expertise, redefining the critical listening experience. This pair of closed-back headphones
-                        are made of industrial, aerospace-grade materials to emphasize durability at a relatively light
-                        weight of 11 oz.<br><br>
-    
-                        From the handcrafted microfiber ear cushions to the robust metal headband with inner damping
-                        element, the components work together to deliver comfort and uncompromising sound. Its closed-back
-                        design delivers up to 27 dB of passive noise cancellation, reducing resonance by reflecting sound to
-                        a dedicated absorber. For connectivity, a specially tuned cable is included with a balanced gold
-                        connector.</p>
+                    <p class="black-p50">Reap the advantages of a flat diaphragm tweeter cone. This provides a fast
+                        response rate and excellent high frequencies that lower tiered bookshelf speakers cannot
+                        provide. The woofers are made from aluminum that produces a unique and clear sound. XLR inputs
+                        allow you to connect to a mixer for more advanced usage.
+
+                        The ZX7 speaker is the perfect blend of stylish design and high performance. It houses an
+                        encased MDF wooden enclosure which minimises acoustic resonance. Dual connectivity allows
+                        pairing through bluetooth or traditional optical and RCA input. Switch input sources and control
+                        volume at your finger tips with the included wireless remote. This versatile speaker is equipped
+                        to deliver an authentic listening experience.</p>
                 </div>
                 <div class="inBox">
                     <h3 class="black-32px">
@@ -102,35 +101,47 @@
                     </h3>
                     <div class="inBoxDivs">
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Headphone Unit</p>
+                            <p class="orange-15px">2x</p>
+                            <p class="black-p50">Speaker Unit</p>
                         </div>
                         <div>
-                            <p class="orange-15px">2x</p><p class="black-p50">Replacement Earcups</p>
+                            <p class="orange-15px">2x</p>
+                            <p class="black-p50">Speaker Cloth Panel</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">User Manual</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">User Manual</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">3.5mm 5m Audio Cable</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">3.5mm 7.5m Audio Cable</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Travel Bag</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">7.5m Optical Cable</p>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="img-reviews">
                 <div>
-                    <img src="img/Headphones/XX99-II-Review/img-1.png" alt="XX99">
-                    <img src="img/Headphones/XX99-II-Review/img-2.png" alt="XX99">
+                    <img src="img/Speakers/ZX7-Review/img-1.png" alt="ZX7">
+                    <img src="img/Speakers/ZX7-Review/img-2.png" alt="ZX7">
                 </div>
-                <div><img src="img/Headphones/XX99-II-Review/img-3.png" alt="XX99"></div>
+                <div><img src="img/Speakers/ZX7-Review/img-3.png" alt="ZX7"></div>
             </section>
             <section class="otherProducts">
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
                     <div class="recomended-products">
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
+                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="ZX9">
+                            <div>
+                                <h5 class="black-24px">ZX9 SPEAKER</h5>
+                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
+                            </div>
+                        </div>
+                        <div class="recomended">
+                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-II">
                             <div>
                                 <h5 class="black-24px">XX99 MARK I</h5>
                                 <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
@@ -141,13 +152,6 @@
                             <div>
                                 <h5 class="black-24px">XX59</h5>
                                 <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
-                            </div>
-                        </div>
-                        <div class="recomended">
-                            <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
-                            <div>
-                                <h5 class="black-24px">ZX9 SPEAKER</h5>
-                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                     </div>
