--- a/product6.html
+++ b/product6.html
@@ -46,17 +46,17 @@
                 <a href="headphones.html">
                     <p class="black-p50" id="goBack">GO BACK</p>
                 </a>
-                <img src="img/Headphones/big-imgs/XX99-II.png" alt="XX99">
+                <img src="img/Earphone/big-imgs/YX1.png" alt="YX1">
                 <div class="text-div">
                     <span>NEW PRODUCT</span>
                     <h2 class="black-40px">
-                        XX99 MARK II
-                        HEADPHONES
+                        YX1 WIRELESS
+                        EARPHONES
                     </h2>
-                    <p class="black-p50">The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines
-                        your premium headphone experience by reproducing the balanced depth and precision of
-                        studio-quality sound.</p>
-                    <h4>$ 2,999</h4>
+                    <p class="black-p50">Tailor your listening experience with bespoke dynamic drivers from the new YX1
+                        Wireless Earphones. Enjoy incredible high-fidelity sound even in noisy environments with its
+                        active noise cancellation feature.</p>
+                    <h4>$ 599</h4>
                     <div>
                         <div>
                             <button id="countDown">
@@ -85,16 +85,16 @@
                     <h3 class="black-32px">
                         FEATURES
                     </h3>
-                    <p class="black-p50">As the headphones all others are measured against, the XX99 Mark I demonstrates over five decades of
-                        audio expertise, redefining the critical listening experience. This pair of closed-back headphones
-                        are made of industrial, aerospace-grade materials to emphasize durability at a relatively light
-                        weight of 11 oz.<br><br>
-    
-                        From the handcrafted microfiber ear cushions to the robust metal headband with inner damping
-                        element, the components work together to deliver comfort and uncompromising sound. Its closed-back
-                        design delivers up to 27 dB of passive noise cancellation, reducing resonance by reflecting sound to
-                        a dedicated absorber. For connectivity, a specially tuned cable is included with a balanced gold
-                        connector.</p>
+                    <p class="black-p50">Experience unrivalled stereo sound thanks to innovative acoustic technology.
+                        With improved ergonomics designed for full day wearing, these revolutionary earphones have been
+                        finely crafted to provide you with the perfect fit, delivering complete comfort all day long
+                        while enjoying exceptional noise isolation and truly immersive sound.<br><br>
+
+                        The YX1 Wireless Earphones features customizable controls for volume, music, calls, and voice
+                        assistants built into both earbuds. The new 7-hour battery life can be extended up to 28 hours
+                        with the charging case, giving you uninterrupted play time. Exquisite craftsmanship with a
+                        splash resistant design now available in an all new white and grey color scheme as well as the
+                        popular classic black.</p>
                 </div>
                 <div class="inBox">
                     <h3 class="black-32px">
@@ -102,29 +102,34 @@
                     </h3>
                     <div class="inBoxDivs">
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Headphone Unit</p>
+                            <p class="orange-15px">2x</p>
+                            <p class="black-p50">Earphone Unit</p>
                         </div>
                         <div>
-                            <p class="orange-15px">2x</p><p class="black-p50">Replacement Earcups</p>
+                            <p class="orange-15px">6x</p>
+                            <p class="black-p50">Multi-size Earplugs</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">User Manual</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">User Manual</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">3.5mm 5m Audio Cable</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">USB-C Charging Cable</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Travel Bag</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">Travel Pouch</p>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="img-reviews">
                 <div>
-                    <img src="img/Headphones/XX99-II-Review/img-1.png" alt="XX99">
-                    <img src="img/Headphones/XX99-II-Review/img-2.png" alt="XX99">
+                    <img src="img/Earphone/YX1-Review/img-1.png" alt="YX1">
+                    <img src="img/Earphone/YX1-Review/img-2.png" alt="YX1">
                 </div>
-                <div><img src="img/Headphones/XX99-II-Review/img-3.png" alt="XX99"></div>
+                <div><img src="img/Earphone/YX1-Review/img-3.png" alt="YX1"></div>
             </section>
             <section class="otherProducts">
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
@@ -140,14 +145,14 @@
                             <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
                             <div>
                                 <h5 class="black-24px">XX59</h5>
-                                <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
                             <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
                             <div>
                                 <h5 class="black-24px">ZX9 SPEAKER</h5>
-                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                     </div>
