--- a/product2.html
+++ b/product2.html
@@ -140,7 +140,7 @@
                             <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
                             <div>
                                 <h5 class="black-24px">XX59</h5>
-                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
