--- a/product4.html
+++ b/product4.html
@@ -46,17 +46,17 @@
                 <a href="headphones.html">
                     <p class="black-p50" id="goBack">GO BACK</p>
                 </a>
-                <img src="img/Headphones/big-imgs/XX99-II.png" alt="XX99">
+                <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99">
                 <div class="text-div">
                     <span>NEW PRODUCT</span>
                     <h2 class="black-40px">
-                        XX99 MARK II
-                        HEADPHONES
+                        ZX9
+                        SPEAKER
                     </h2>
-                    <p class="black-p50">The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines
-                        your premium headphone experience by reproducing the balanced depth and precision of
-                        studio-quality sound.</p>
-                    <h4>$ 2,999</h4>
+                    <p class="black-p50">Upgrade your sound system with the all new ZX9 active speaker. It's a bookshelf
+                        speaker system that offers truly wireless connectivity -- creating new possibilities for more
+                        pleasing and practical audio setups.</p>
+                    <h4>$ 4,500</h4>
                     <div>
                         <div>
                             <button id="countDown">
@@ -85,16 +85,16 @@
                     <h3 class="black-32px">
                         FEATURES
                     </h3>
-                    <p class="black-p50">As the headphones all others are measured against, the XX99 Mark I demonstrates over five decades of
-                        audio expertise, redefining the critical listening experience. This pair of closed-back headphones
-                        are made of industrial, aerospace-grade materials to emphasize durability at a relatively light
-                        weight of 11 oz.<br><br>
-    
-                        From the handcrafted microfiber ear cushions to the robust metal headband with inner damping
-                        element, the components work together to deliver comfort and uncompromising sound. Its closed-back
-                        design delivers up to 27 dB of passive noise cancellation, reducing resonance by reflecting sound to
-                        a dedicated absorber. For connectivity, a specially tuned cable is included with a balanced gold
-                        connector.</p>
+                    <p class="black-p50">Connect via Bluetooth or nearly any wired source. This speaker features
+                        optical, digital coaxial, USB Type-B, stereo RCA, and stereo XLR inputs, allowing you to have up
+                        to five wired source devices connected for easy switching. Improved bluetooth technology offers
+                        near lossless audio quality at up to 328ft (100m).<br><br>
+
+                        Discover clear, more natural sounding highs than the competition with ZX9's signature planar
+                        diaphragm tweeter. Equally important is its powerful room-shaking bass courtesy of a 6.5”
+                        aluminum alloy bass unit. You'll be able to enjoy equal sound quality whether in a large room or
+                        small den. Furthermore, you will experience new sensations from old songs since it can respond
+                        to even the subtle waveforms.</p>
                 </div>
                 <div class="inBox">
                     <h3 class="black-32px">
@@ -102,52 +102,57 @@
                     </h3>
                     <div class="inBoxDivs">
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Headphone Unit</p>
+                            <p class="orange-15px">2x</p>
+                            <p class="black-p50">Speaker Unit</p>
                         </div>
                         <div>
-                            <p class="orange-15px">2x</p><p class="black-p50">Replacement Earcups</p>
+                            <p class="orange-15px">2x</p>
+                            <p class="black-p50">Speaker Cloth Panel</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">User Manual</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">User Manual</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">3.5mm 5m Audio Cable</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">3.5mm 10m Audio Cable</p>
                         </div>
                         <div>
-                            <p class="orange-15px">1x</p><p class="black-p50">Travel Bag</p>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">10m Optical Cable</p>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="img-reviews">
                 <div>
-                    <img src="img/Headphones/XX99-II-Review/img-1.png" alt="XX99">
-                    <img src="img/Headphones/XX99-II-Review/img-2.png" alt="XX99">
+                    <img src="img/Speakers/ZX9-Review/img-1.png" alt="ZX9">
+                    <img src="img/Speakers/ZX9-Review/img-2.png" alt="ZX9">
                 </div>
-                <div><img src="img/Headphones/XX99-II-Review/img-3.png" alt="XX99"></div>
+                <div><img src="img/Speakers/ZX9-Review/img-3.png" alt="ZX9"></div>
             </section>
             <section class="otherProducts">
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
                     <div class="recomended-products">
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
+                            <img src="img/Speakers/ZX7.png" alt="ZX7">
+                            <div>
+                                <h5 class="black-24px">ZX7 SPEAKER</h5>
+                                <a href="product5.html"><button class="orange-button">SEE PRODUCT</button></a>
+                            </div>
+                        </div>
+                        <div class="recomended">
+                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-II">
                             <div>
                                 <h5 class="black-24px">XX99 MARK I</h5>
                                 <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
+                            <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
                             <div>
                                 <h5 class="black-24px">XX59</h5>
                                 <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
-                            </div>
-                        </div>
-                        <div class="recomended">
-                            <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
-                            <div>
-                                <h5 class="black-24px">ZX9 SPEAKER</h5>
-                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                     </div>
