--- a/headphones.html
+++ b/headphones.html
@@ -103,7 +103,7 @@
                     <p class="black-p50">Enjoy your audio almost anywhere and customize it to your specific tastes with
                         the XX59 headphones. The stylish yet durable versatile wireless headset is a brilliant companion
                         at home or on the move.</p>
-                    <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                    <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
                 </div>
             </section>
             <section class="buy-divs">
