--- a/index.html
+++ b/index.html
@@ -37,20 +37,6 @@
                         </li>
                     </ul>
                 </div>
-                <!-- <div class="basketList-div">
-                    <button id="basket"><img src="img/basket.svg" alt="basket"></button>
-                    <div id="list" style="display: none;">
-                        <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
-                        <div id="items">
-                            
-                        </div>
-                        <div class="totalAndButton">
-                            <div id="total"><p class="black-p50">TOTAL</p><h3>0$</h3></div>
-                            <button class="orange-button">CHECKOUT</button>
-                        </div>
-                        <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
-                    </div>
-                </div> -->
             </nav>
         </div>
     </header>
@@ -111,20 +97,20 @@
                             SPEAKER</h2>
                         <p class="white-p75">Upgrade to premium speakers that are phenomenally built to deliver truly
                             remarkable sound.</p>
-                        <a href="#"><button class="black-button">SEE PRODUCT</button></a>
+                        <a href="product4.html"><button class="black-button">SEE PRODUCT</button></a>
                     </div>
                 </div>
                 <div class="mainProduct2">
                     <div class="text-div">
                         <h3>ZX7 SPEAKER</h3>
-                        <a href="#"><button class="black-button">SEE PRODUCT</button></a>
+                        <a href="product5.html"><button class="black-button">SEE PRODUCT</button></a>
                     </div>
                 </div>
                 <div class="mainProduct3">
                     <div><img src="img/YX1-earphones.png" alt="YX1"></div>
                     <div class="text-div">
                         <h3>YX1 EARPHONES</h3>
-                        <a href="#"><button class="black-button">SEE PRODUCT</button></a>
+                        <a href="product6.html"><button class="black-button">SEE PRODUCT</button></a>
                     </div>
                 </div>
             </section>
