--- a/product.html
+++ b/product.html
@@ -121,10 +121,10 @@
             </section>
             <section class="img-reviews">
                 <div>
-                    <img src="img/Headphones/XX99-II-Review/img-1.png" alt="XX99">
-                    <img src="img/Headphones/XX99-II-Review/img-2.png" alt="XX99">
+                    <img src="img/Headphones/XX99-II-Review/img-1.png" alt="XX99-II">
+                    <img src="img/Headphones/XX99-II-Review/img-2.png" alt="XX99-II">
                 </div>
-                <div><img src="img/Headphones/XX99-II-Review/img-3.png" alt="XX99"></div>
+                <div><img src="img/Headphones/XX99-II-Review/img-3.png" alt="XX99-II"></div>
             </section>
             <section class="otherProducts">
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
