--- a/product4.html
+++ b/product4.html
@@ -46,7 +46,7 @@
                 <a href="headphones.html">
                     <p class="black-p50" id="goBack">GO BACK</p>
                 </a>
-                <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99">
+                <img src="img/Speakers/big-imgs/ZX9.png" alt="ZX9">
                 <div class="text-div">
                     <span>NEW PRODUCT</span>
                     <h2 class="black-40px">
