--- a/product5.html
+++ b/product5.html
@@ -46,7 +46,7 @@
                 <a href="headphones.html">
                     <p class="black-p50" id="goBack">GO BACK</p>
                 </a>
-                <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99">
+                <img src="img/Speakers/big-imgs/ZX7.png" alt="ZX7">
                 <div class="text-div">
                     <h2 class="black-40px">
                         ZX7
@@ -134,14 +134,14 @@
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
                     <div class="recomended-products">
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="ZX9">
+                            <img src="img/Speakers/big-imgs/ZX9.png" alt="ZX9">
                             <div>
                                 <h5 class="black-24px">ZX9 SPEAKER</h5>
                                 <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-II">
+                            <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
                             <div>
                                 <h5 class="black-24px">XX99 MARK I</h5>
                                 <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
