--- a/speakers.html
+++ b/speakers.html
@@ -37,20 +37,6 @@
                         </li>
                     </ul>
                 </div>
-                <!-- <div class="basketList-div">
-                    <button id="basket"><img src="img/basket.svg" alt="basket"></button>
-                    <div id="list" style="display: none;">
-                        <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
-                        <div id="items">
-                            
-                        </div>
-                        <div class="totalAndButton">
-                            <div id="total"><p class="black-p50">TOTAL</p><h3>0$</h3></div>
-                            <button class="orange-button">CHECKOUT</button>
-                        </div>
-                        <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
-                    </div>
-                </div> -->
             </nav>
         </div>
     </header>
@@ -65,7 +51,7 @@
         <div class="container">
             <section class="product">
                 <div class="big-img">
-                    <img src="img/Speakers/ZX9.png" alt="speaker">
+                    <img src="img/Speakers/ZX9.png" alt="ZX9">
                     <div></div>
                 </div>
                 <div class="text-div">
@@ -76,7 +62,7 @@
                     <p class="black-p50">Upgrade your sound system with the all new ZX9 active speaker. It's a bookshelf
                         speaker system that offers truly wireless connectivity -- creating new possibilities for more
                         pleasing and practical audio setups.</p>
-                    <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                    <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
                 </div>
             </section>
             <section class="product">
@@ -87,10 +73,10 @@
                     <p class="black-p50">Stream high quality sound wirelessly with minimal loss. The ZX7 bookshelf
                         speaker uses high-end audiophile components that represents the top of the line powered speakers
                         for home or studio use.</p>
-                    <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                    <a href="product5.html"><button class="orange-button">SEE PRODUCT</button></a>
                 </div>
                 <div class="big-img">
-                    <img src="img/Speakers/ZX7.png" alt="speaker">
+                    <img src="img/Speakers/ZX7.png" alt="ZX7">
                     <div></div>
                 </div>
             </section>
