--- a/earphones.html
+++ b/earphones.html
@@ -37,20 +37,6 @@
                         </li>
                     </ul>
                 </div>
-                <!-- <div class="basketList-div">
-                    <button id="basket"><img src="img/basket.svg" alt="basket"></button>
-                    <div id="list" style="display: none;">
-                        <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
-                        <div id="items">
-                            
-                        </div>
-                        <div class="totalAndButton">
-                            <div id="total"><p class="black-p50">TOTAL</p><h3>0$</h3></div>
-                            <button class="orange-button">CHECKOUT</button>
-                        </div>
-                        <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
-                    </div>
-                </div> -->
             </nav>
         </div>
     </header>
@@ -76,7 +62,7 @@
                     <p class="black-p50">Tailor your listening experience with bespoke dynamic drivers from the new YX1
                         Wireless Earphones. Enjoy incredible high-fidelity sound even in noisy environments with its
                         active noise cancellation feature.</p>
-                    <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                    <a href="product6.html"><button class="orange-button">SEE PRODUCT</button></a>
                 </div>
             </section>
             <section class="buy-divs">
