--- a/product2.html
+++ b/product2.html
@@ -46,7 +46,7 @@
                 <a href="headphones.html">
                     <p class="black-p50" id="goBack">GO BACK</p>
                 </a>
-                <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99">
+                <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99-I">
                 <div class="text-div">
                     <h2 class="black-40px">
                         XX99 MARK I
@@ -121,16 +121,16 @@
             </section>
             <section class="img-reviews">
                 <div>
-                    <img src="img/Headphones/XX99-I-Review/img-1.png" alt="XX99">
-                    <img src="img/Headphones/XX99-I-Review/img-2.png" alt="XX99">
+                    <img src="img/Headphones/XX99-I-Review/img-1.png" alt="XX99-I">
+                    <img src="img/Headphones/XX99-I-Review/img-2.png" alt="XX99-I">
                 </div>
-                <div><img src="img/Headphones/XX99-I-Review/img-3.png" alt="XX99"></div>
+                <div><img src="img/Headphones/XX99-I-Review/img-3.png" alt="XX99-I"></div>
             </section>
             <section class="otherProducts">
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
                     <div class="recomended-products">
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-I">
+                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-II">
                             <div>
                                 <h5 class="black-24px">XX99 MARK II</h5>
                                 <a href="product.html"><button class="orange-button">SEE PRODUCT</button></a>
@@ -147,7 +147,7 @@
                             <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
                             <div>
                                 <h5 class="black-24px">ZX9 SPEAKER</h5>
-                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                     </div>
