--- a/product6.html
+++ b/product6.html
@@ -145,14 +145,14 @@
                             <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
                             <div>
                                 <h5 class="black-24px">XX59</h5>
-                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
                             <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
                             <div>
                                 <h5 class="black-24px">ZX9 SPEAKER</h5>
-                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                     </div>
