--- a/product4.html
+++ b/product4.html
@@ -135,21 +135,21 @@
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
                     <div class="recomended-products">
                         <div class="recomended">
-                            <img src="img/Speakers/ZX7.png" alt="ZX7">
+                            <img src="img/Speakers/medium-imgs/ZX7.png" alt="ZX7">
                             <div>
                                 <h5 class="black-24px">ZX7 SPEAKER</h5>
                                 <a href="product5.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
-                            <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-II">
+                            <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
                             <div>
                                 <h5 class="black-24px">XX99 MARK I</h5>
                                 <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
-                            <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
+                            <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
                             <div>
                                 <h5 class="black-24px">XX59</h5>
                                 <a href="product3.html"><button class="orange-button">SEE PRODUCT</button></a>
