--- a/product3.html
+++ b/product3.html
@@ -49,8 +49,8 @@
                 <img src="img/Headphones/big-imgs/XX59.png" alt="XX59">
                 <div class="text-div">
                     <h2 class="black-40px">
-                        XX59
-                        Headphones
+                        XX59<br>
+                        HEADPHONES
                     </h2>
                     <p class="black-p50">Enjoy your audio almost anywhere and customize it to your specific tastes with
                         the XX59 headphones. The stylish yet durable versatile wireless headset is a brilliant companion
@@ -133,21 +133,21 @@
                             <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
                             <div>
                                 <h5 class="black-24px">XX99 MARK I</h5>
-                                <a href="product.html"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
                             <img src="img/Headphones/medium-imgs/XX99-II.png" alt="XX99-II">
                             <div>
                                 <h5 class="black-24px">XX99 MARK II</h5>
-                                <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                         <div class="recomended">
                             <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
                             <div>
                                 <h5 class="black-24px">ZX9 SPEAKER</h5>
-                                <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                                <a href="product4.html"><button class="orange-button">SEE PRODUCT</button></a>
                             </div>
                         </div>
                     </div>
